objects/Study_ID__c.object
<CustomObject>
    <fields>
        <fullName>Clinical_Trial_Profile__c</fullName>
        <label>Clinical Trial Profile</label>
        <referenceTo>Clinical_Trial_Profile__c</referenceTo>
        <relationshipLabel>Study IDs</relationshipLabel>
        <relationshipName>Study_IDs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ID_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ID Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Key__c</fullName>
        <description>STUDY_ID + ID_TYPE + ID_VAL</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Primary Key (External Use)</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Study ID</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Study ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Study IDs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>